[gd_scene load_steps=18 format=2]

[ext_resource path="res://Images/startups_from_hell__underground_arena.png" type="Texture" id=1]
[ext_resource path="res://Images/Sprite-0003.png" type="Texture" id=2]
[ext_resource path="res://Scripts/TurnBasedCombat.gd" type="Script" id=3]
[ext_resource path="res://Images/Sprite-oldmage.png" type="Texture" id=4]
[ext_resource path="res://Images/Sprite-0004.png" type="Texture" id=5]
[ext_resource path="res://Images/Resized_test.png" type="Texture" id=6]
[ext_resource path="res://Turn Based Combat/Mentor1.tres" type="Resource" id=7]
[ext_resource path="res://Fontes/8-bit Arcade In.ttf" type="DynamicFontData" id=8]

[sub_resource type="StyleBoxFlat" id=1]

[sub_resource type="Animation" id=7]
resource_name = "\"Mentor.die\""
tracks/0/type = "value"
tracks/0/path = NodePath("Mentor:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Dellman.damage"
tracks/0/type = "value"
tracks/0/path = NodePath("Dellman:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.4, 0.6, 0.7, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "Dellman.died"
tracks/0/type = "value"
tracks/0/path = NodePath("Dellman:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "Mentor.died"
tracks/0/type = "value"
tracks/0/path = NodePath("Mentor:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Mentor_damage"
tracks/0/type = "value"
tracks/0/path = NodePath("Mentor:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.4, 0.6, 0.7, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Mentor:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Dellman:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="StyleBoxFlat" id=5]

[sub_resource type="DynamicFont" id=6]
size = 30
font_data = ExtResource( 8 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )
enemy = ExtResource( 7 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 545.0
texture = ExtResource( 1 )
expand = true

[node name="ColorRect" type="ColorRect" parent="."]
margin_top = 535.0
margin_right = 1025.0
margin_bottom = 607.0
color = Color( 0, 0, 0, 1 )

[node name="Fight" type="TextureButton" parent="ColorRect"]
margin_left = 419.0
margin_top = 7.0
margin_right = 566.0
margin_bottom = 57.0
texture_normal = ExtResource( 2 )
expand = true

[node name="Dellman" type="TextureRect" parent="."]
margin_left = 31.0
margin_top = 195.0
margin_right = 356.0
margin_bottom = 481.0
texture = ExtResource( 6 )
expand = true

[node name="ProgressBar" type="ProgressBar" parent="Dellman"]
modulate = Color( 0.243137, 1, 0.176471, 1 )
self_modulate = Color( 0.552941, 1, 0.0627451, 1 )
margin_left = 43.0
margin_top = -35.0
margin_right = 329.0
margin_bottom = -10.0
input_pass_on_modal_close_click = false
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_styles/fg = SubResource( 1 )
max_value = 500.0
step = 1.0
value = 100.0
percent_visible = false

[node name="Label" type="Label" parent="Dellman/ProgressBar"]
margin_right = 287.0
margin_bottom = 24.0

[node name="Mentor" type="TextureRect" parent="."]
margin_left = 700.0
margin_top = 96.0
margin_right = 873.0
margin_bottom = 349.0
texture = ExtResource( 4 )

[node name="ProgressBar" type="ProgressBar" parent="Mentor"]
modulate = Color( 0.243137, 1, 0.176471, 1 )
self_modulate = Color( 0.552941, 1, 0.0627451, 1 )
margin_left = -79.0
margin_top = -32.0
margin_right = 262.0
margin_bottom = -7.0
input_pass_on_modal_close_click = false
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_styles/fg = SubResource( 1 )
max_value = 1000.0
step = 1.0
value = 100.0
percent_visible = false

[node name="Label" type="Label" parent="Mentor/ProgressBar"]
margin_right = 340.0
margin_bottom = 24.0

[node name="Mentor" type="TextureRect" parent="Mentor"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 700.0
margin_top = 96.0
margin_right = 873.0
margin_bottom = 349.0
texture = ExtResource( 4 )

[node name="ProgressBar" type="ProgressBar" parent="Mentor/Mentor"]
modulate = Color( 0.243137, 1, 0.176471, 1 )
self_modulate = Color( 0.552941, 1, 0.0627451, 1 )
margin_left = -79.0
margin_top = -32.0
margin_right = 262.0
margin_bottom = -7.0
input_pass_on_modal_close_click = false
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_styles/fg = SubResource( 1 )
max_value = 1000.0
step = 1.0
value = 100.0
percent_visible = false

[node name="Label" type="Label" parent="Mentor/Mentor/ProgressBar"]
margin_right = 340.0
margin_bottom = 24.0

[node name="Mentor" type="TextureRect" parent="Mentor/Mentor"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 700.0
margin_top = 96.0
margin_right = 873.0
margin_bottom = 349.0
texture = ExtResource( 4 )

[node name="ProgressBar" type="ProgressBar" parent="Mentor/Mentor/Mentor"]
modulate = Color( 0.243137, 1, 0.176471, 1 )
self_modulate = Color( 0.552941, 1, 0.0627451, 1 )
margin_left = -79.0
margin_top = -32.0
margin_right = 262.0
margin_bottom = -7.0
input_pass_on_modal_close_click = false
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_styles/fg = SubResource( 1 )
max_value = 1000.0
step = 1.0
value = 100.0
percent_visible = false

[node name="Label" type="Label" parent="Mentor/Mentor/Mentor/ProgressBar"]
margin_right = 340.0
margin_bottom = 24.0

[node name="ColorRect2" type="ColorRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.909804 )
margin_left = 142.0
margin_top = 432.0
margin_right = 888.0
margin_bottom = 592.0
color = Color( 0.054902, 0.054902, 0.054902, 1 )

[node name="TextureButton" type="TextureButton" parent="ColorRect2"]
margin_left = 59.0
margin_top = 13.0
margin_right = 298.0
margin_bottom = 78.0
texture_normal = ExtResource( 5 )
expand = true
__meta__ = {
"_editor_description_": ""
}

[node name="ColorRect" type="ColorRect" parent="ColorRect2/TextureButton"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 10.0
margin_top = 11.0
margin_right = 228.0
margin_bottom = 55.0

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect2/TextureButton"]
modulate = Color( 0.964706, 0.941176, 0.941176, 1 )
self_modulate = Color( 1, 0.909804, 0.909804, 1 )
margin_left = 12.0
margin_top = 13.0
margin_right = 228.0
margin_bottom = 57.0
rect_scale = Vector2( 1.13254, 1.34374 )
text = "A-) Uma guerra causada por pensamentos opostos"
fit_content_height = true
__meta__ = {
"_editor_description_": ""
}

[node name="TextureButton2" type="TextureButton" parent="ColorRect2"]
margin_left = 439.0
margin_top = 11.0
margin_right = 678.0
margin_bottom = 76.0
texture_normal = ExtResource( 5 )
expand = true

[node name="ColorRect" type="ColorRect" parent="ColorRect2/TextureButton2"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 10.0
margin_top = 11.0
margin_right = 228.0
margin_bottom = 55.0

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect2/TextureButton2"]
modulate = Color( 0.964706, 0.941176, 0.941176, 1 )
self_modulate = Color( 1, 0.909804, 0.909804, 1 )
margin_left = 12.0
margin_top = 22.0
margin_right = 228.0
margin_bottom = 66.0
rect_scale = Vector2( 1.13254, 1.34374 )
text = "B-) Um vírus mortal"
fit_content_height = true
__meta__ = {
"_editor_description_": ""
}

[node name="TextureButton3" type="TextureButton" parent="ColorRect2"]
margin_left = 57.0
margin_top = 90.0
margin_right = 296.0
margin_bottom = 155.0
texture_normal = ExtResource( 5 )
expand = true

[node name="ColorRect" type="ColorRect" parent="ColorRect2/TextureButton3"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 10.0
margin_top = 11.0
margin_right = 228.0
margin_bottom = 55.0

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect2/TextureButton3"]
modulate = Color( 0.964706, 0.941176, 0.941176, 1 )
self_modulate = Color( 1, 0.909804, 0.909804, 1 )
margin_left = 14.0
margin_top = 14.0
margin_right = 230.0
margin_bottom = 58.0
rect_scale = Vector2( 1.13254, 1.34374 )
text = "C-) Um vírus que atrasa o pensamento das pessoas "
fit_content_height = true
__meta__ = {
"_editor_description_": ""
}

[node name="TextureButton4" type="TextureButton" parent="ColorRect2"]
margin_left = 441.0
margin_top = 90.0
margin_right = 680.0
margin_bottom = 155.0
texture_normal = ExtResource( 5 )
expand = true

[node name="ColorRect" type="ColorRect" parent="ColorRect2/TextureButton4"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 10.0
margin_top = 11.0
margin_right = 228.0
margin_bottom = 55.0

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect2/TextureButton4"]
modulate = Color( 0.964706, 0.941176, 0.941176, 1 )
self_modulate = Color( 1, 0.909804, 0.909804, 1 )
margin_left = 12.0
margin_top = 24.0
margin_right = 228.0
margin_bottom = 68.0
rect_scale = Vector2( 1.13254, 1.34374 )
text = "D-) Um vírus inofensivo "
fit_content_height = true
__meta__ = {
"_editor_description_": ""
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/\"Mentor.die\"" = SubResource( 7 )
anims/Dellman.damage = SubResource( 4 )
anims/Dellman.died = SubResource( 9 )
anims/Mentor.died = SubResource( 8 )
anims/Mentor_damage = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="Textbox" type="Panel" parent="."]
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 37.0
margin_top = 27.0
margin_right = 597.0
margin_bottom = 139.0
custom_styles/panel = SubResource( 5 )

[node name="Label" type="Label" parent="Textbox"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 15.0
margin_right = -15.0
margin_bottom = -15.0
custom_fonts/font = SubResource( 6 )
text = "hello"
autowrap = true

[connection signal="pressed" from="ColorRect/Fight" to="." method="_on_Fight_pressed"]
[connection signal="pressed" from="ColorRect2/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="ColorRect2/TextureButton2" to="." method="_on_TextureButton2_pressed"]
[connection signal="pressed" from="ColorRect2/TextureButton3" to="." method="_on_TextureButton3_pressed"]
[connection signal="pressed" from="ColorRect2/TextureButton4" to="." method="_on_TextureButton4_pressed"]
